# getcli

./: .gitignore  AGENTS.md  README.md  rule.md  rule2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-web.yml  release-cli.yml  verify-tool.yml
cli/: .gitignore  Cargo.toml  build.rs
cli/src/: installer.rs  main.rs  manifest.rs  registry.rs  state.rs  upgrade_hint.rs
cli/src/commands/: doctor.rs  info.rs  install.rs  list.rs  mod.rs  search.rs  uninstall.rs  update.rs
cli/src/installer/: binary.rs  brew.rs  cargo.rs  npm.rs  pipx.rs  uv.rs
cli/tests/: cli_tests.rs
manifests/: aws.yaml  docker.yaml  feishu.yaml  firebase.yaml  fly.yaml  github.yaml  google-workspace.yaml  kubectl.yaml  netlify.yaml  railway.yaml  stripe.yaml  supabase.yaml  terraform.yaml  turso.yaml  vercel.yaml  wrangler.yaml
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/getcli/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
scripts/: build-tool-verification-matrix.mjs  check-npm-package.mjs  generate-tool-verification.mjs  promote-tool-verification.mjs  verify-tool.mjs
skills/: claude-code.md  codex.md  gemini-cli.md
skills/getcli/: SKILL.md
verification/: specs.mjs
verification/results/: aws.json  docker.json  feishu.json  firebase.json  fly.json  github.json  google-workspace.json  kubectl.json  netlify.json  railway.json  stripe.json  supabase.json  terraform.json  (+3 more)
web/: .gitignore  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  wrangler.toml
(+26 files in other folders)
